# oxidia

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  exploration.md
config/: monsters.xml  server.toml  server.toml.example
config/lua/: actions.xml
config/lua/scripts/: food.lua  teleport.lua
crates/formats/: Cargo.toml
crates/formats/examples/: mapinfo.rs
crates/formats/src/: items_xml.rs  lib.rs  node.rs  otb.rs  otbm.rs  props.rs
crates/net/: Cargo.toml
crates/net/src/: frame.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 0001_init.sql  0002_player_state.sql  0003_player_sex.sql  0004_player_inventory.sql  0005_player_container_items.sql
crates/persistence/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: adler.rs  challenge.rs  charlist.rs  chat.rs  combat_packets.rs  container.rs  creature.rs  enter_world.rs  frame.rs  game_login.rs  lib.rs  login.rs  look.rs  map_description.rs  message.rs  move_thing.rs  outfit.rs  rsa.rs  tile_creature.rs  tile_item.rs  walk.rs  xtea.rs
crates/server/: Cargo.toml
crates/server/examples/: probe.rs  sniff.rs
crates/server/src/: config.rs  game_service.rs  login_service.rs  main.rs
crates/world/: Cargo.toml
crates/world/src/: combat.rs  game.rs  lib.rs  map.rs  outfit_catalog.rs  pathfinding.rs
crates/world/src/game/: chat.rs  combat.rs  condition.rs  containers.rs  gm.rs  items.rs  look.rs  lua.rs  mod.rs  monster.rs  movement.rs  session.rs  test_support.rs  xml_registry.rs
crates/world/tests/: realmap_align.rs  tile_stack_wire.rs
docs/superpowers/: backlog.md
docs/superpowers/plans/: 2026-06-06-issue-1-tile-stack.md  2026-06-06-m3-enter-game.md  2026-06-06-m4-walk.md  2026-06-06-m5-m9-worktree-parallelization.md  2026-06-06-m5-presence.md  2026-06-06-m6-chat.md  2026-06-06-m6.1-stairs.md  2026-06-07-gm-commands.md  2026-06-07-m10.1-ground-items-move.md  2026-06-07-m10.2-inventory-equipment.md  2026-06-07-m7-combat.md  2026-06-07-m7.1-combat-polish.md  2026-06-07-m9-ground-items-look.md  2026-06-08-game-rs-module-split.md
docs/superpowers/specs/: 2026-06-06-issue-1-tile-stack-design.md  2026-06-06-known-issues.md  2026-06-06-m3-enter-game-design.md  2026-06-06-m4-walk-design.md  2026-06-06-m5-presence-design.md  2026-06-06-m6-chat-design.md  2026-06-06-m6.1-stairs-design.md  2026-06-06-roadmap-to-production.md  2026-06-07-gm-commands-design.md  2026-06-07-m10.1-ground-items-move-design.md  2026-06-07-m10.2-inventory-equipment-design.md  2026-06-07-m6.2-ladders-design.md  2026-06-07-m7-combat-design.md  2026-06-07-m7.1-combat-polish-design.md  2026-06-07-m9-ground-items-look-design.md
openspec/: config.yaml
(+45 files in other folders)
