[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["tito"]

[workspace.dependencies]
# Internal crates
net = { path = "crates/net" }
protocol = { path = "crates/protocol" }
formats = { path = "crates/formats" }
world = { path = "crates/world" }
persistence = { path = "crates/persistence" }

# External
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "io-util", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
bytes = "1"
byteorder = "1"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
num-bigint-dig = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
mlua = { version = "0.10", features = ["lua54", "send"] }

[profile.release]
opt-level = 3
lto = "thin"
