[package]
name = "formats"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
byteorder.workspace = true
serde.workspace = true
roxmltree.workspace = true

[dev-dependencies]
bincode.workspace = true
