[package]
name = "protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
bytes.workspace = true
serde.workspace = true
num-bigint-dig.workspace = true

[dev-dependencies]
bincode.workspace = true
