[package]
name = "server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "crustacean-server"
path = "src/main.rs"

[dependencies]
net.workspace = true
protocol.workspace = true
formats.workspace = true
world.workspace = true
persistence.workspace = true

tokio = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
