[package]
name = "world"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
protocol.workspace = true
formats.workspace = true
rand = "0.8"
mlua.workspace = true
serde.workspace = true
roxmltree.workspace = true
bincode.workspace = true
